# connectors

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/scripts/: check_version.sh  compare_versions.py
.github/workflows/: backup.yml  cd.yml  ci.yml  cicd.yml  codeql-analysis.yml  scorecard.yml
docs/: apple_silicon.md  custom.md  develop.md  docker.md  embeddings.md  migration.md  model.md
examples/: custom_dashboard.py  custom_dq.py  custom_lineage.py
metaphor/: __main__.py
metaphor/airflow/: README.md
metaphor/airflow_plugin/: README.md
metaphor/alation/: README.md  __init__.py  client.py  config.py  extractor.py  schema.py
metaphor/athena/: README.md  __init__.py  config.py  extractor.py  models.py
metaphor/azure_data_factory/: __init__.py  config.py  extractor.py  readme.md  utils.py
metaphor/bigquery/: README.md  __init__.py  __main__.py  config.py  extractor.py  handler.py  job_change_event.py  logEvent.py  log_filter.py  log_type.py  queries.py  schema_field.py  table.py  utils.py
metaphor/common/: README.md  api_request.py  api_sink.py  aws.py  base_config.py  base_extractor.py  cli.py  column_statistics.py  constants.py  dataclass.py  embeddings.py  embeddings_config.py  entity_id.py  event_util.py  exception.py  extractor.py  fieldpath.py  file_sink.py  filter.md  filter.py  git.py  handler.py  hierarchy.py  infer_schema.py  kinesis_sink.py  list_util.py  logger.py  logging.py  models.py  query_history.py  requests_config.py  run_metadata.py  runner.py  s3.py  sampling.py  sink.py  snowflake.py  storage.py  tag_matcher.py  usage_util.py  (+2 more)
metaphor/confluence/: README.md  __init__.py  config.py  extractor.py
metaphor/database/: config.py  extractor.py
metaphor/datahub/: README.md  __init__.py  config.py  docker-compose-without-neo4j-m1.quickstart.yml  extractor.py  gql_parser.py
metaphor/dbt/: README.md  __init__.py  __main__.py  artifact_parser.py  catalog_parser_v1.py  config.py  dbt_model.py  extractor.py  gen_all_models.sh  gen_models.sh  manifest_parser.py  manifest_parser_v3.py  manifest_parser_v4.py  manifest_parser_v5.py  manifest_parser_v6.py  manifest_parser_v7.py  util.py
metaphor/dbt_extractor/: extractor.py  handler.py
metaphor/fivetran/: README.md  __init__.py  config.py  extractor.py  models.py
metaphor/glue/: README.md  __init__.py  config.py  extractor.py
metaphor/google_directory/: README.md  __main__.py  authenticate.py  extractor.py  handler.py
metaphor/great_expectations/: README.md  __init__.py  config.py  extractor.py
metaphor/hive/: README.md  __init__.py  config.py  docker-compose.yml  extractor.py
metaphor/informatica/: README.md  __init__.py  config.py  extractor.py  models.py  utils.py
metaphor/kafka/: README.md  __init__.py  config.py  docker-compose.yml  extractor.py  schema_resolver.py
metaphor/looker/: README.md  __init__.py  __main__.py  config.py  extractor.py  folder.py  handler.py  lookml_parser.py
metaphor/metabase/: README.md  __init__.py  __main__.py  config.py  extractor.py
metaphor/monday/: README.md  __init__.py  config.py  extractor.py
metaphor/mongodb/: README.md  __init__.py  config.py  extractor.py
metaphor/monte_carlo/: README.md  __init__.py  config.py  extractor.py
metaphor/mssql/: README.md  ReadMe.md  __init__.py  config.py  extractor.py  model.py  mssql_client.py
metaphor/mysql/: README.md  __init__.py  config.py  extractor.py
metaphor/notion/: README.md  __init__.py  config.py  extractor.py
metaphor/openapi/: README.md  __init__.py  config.py  extractor.py
metaphor/oracle/: README.md  __init__.py  config.py  extractor.py
metaphor/postgresql/: README.md  __init__.py  __main__.py  config.py  extractor.py  handler.py  log_parser.py
metaphor/power_bi/: README.md  __init__.py  __main__.py  config.py  extractor.py  graph_api_client.py  graph_utils.py  models.py  power_bi_client.py  power_bi_utils.py  power_query_parser.py
metaphor/quick_sight/: README.md  __init__.py  client.py  cll.py  config.py  data_source_utils.py  extractor.py  folder.py  lineage.py  models.py
metaphor/redshift/: README.md  __init__.py  __main__.py  access_event.py  config.py  extractor.py  utils.py
metaphor/s3/: README.md  __init__.py  boto_helpers.py  config.py  docker-compose.yml  extractor.py  parse_schema.py  path_spec.py  table_data.py
metaphor/sharepoint/: README.md  __init__.py  config.py  extractor.py
metaphor/slack_directory/: __main__.py  extractor.py  handler.py
metaphor/snowflake/: README.md  __init__.py  __main__.py  accessed_object.py  auth.py  config.py  extractor.py  filter.py  utils.py
metaphor/snowflake_extractor/: extractor.py  handler.py
metaphor/snowflake_usage/: extractor.py
metaphor/static_web/: README.md  __init__.py  config.py  extractor.py  utils.py
metaphor/synapse/: README.md  __init__.py  auth_client.py  config.py  extractor.py  model.py  workspace_client.py  workspace_query.py
metaphor/tableau/: README.md  __init__.py  __main__.py  config.py  extractor.py  graphql_utils.py  query.py  workbook.py
metaphor/thought_spot/: README.md  __init__.py  __main__.py  config.py  extractor.py  models.py  utils.py
metaphor/trino/: README.md  __init__.py  config.py  extractor.py
metaphor/unity_catalog/: README.md  __init__.py  config.py  extractor.py  models.py  queries.py  utils.py
tests/: conftest.py  test_utils.py
tests/alation/: expected.json  test_client.py  test_config.py  test_extractor.py
tests/athena/: expected.json  expected_query_logs.json  test_extractor.py
tests/azure_data_factory/: expected.json  expected_files.json  test_extractor.py  test_extractor_from_files.py  test_utils.py
tests/bigquery/: config.json  config.yml  config2.yml  config_missing_credentials.yml  expected.json  load_entries.py  query_logs.json  sample_log.json  test_config.py  test_extractor.py  test_job_change_event.py  test_parser.py  test_table_extractor.py  test_utils.py
tests/common/: api_config.json  config.yml  (+31 more)
(+864 files in other folders)
