[tool.poetry]
name = "metaphor-connectors"
version = "0.13.82"
license = "Apache-2.0"
description = "A collection of Python-based 'connectors' that extract metadata from various sources to ingest into the Metaphor app."
authors = ["Metaphor <dev@metaphor.io>"]
readme = "README.md"
homepage = "https://metaphor.io"
repository = "https://github.com/MetaphorData/connectors"
packages = [
    { include = "metaphor" },
]

[tool.poetry.scripts]
metaphor = 'metaphor.__main__:main'

[tool.poetry.dependencies]
asyncpg = { version = "^0.27.0", optional = true }
avro = { version = "^1.11.3", optional = true }
aws-assume-role-lib = "^2.10.0"
azure-identity = { version = "^1.14.0", optional = true }
azure-mgmt-datafactory = { version = "^3.1.0", optional = true }
boto3 = "^1.28.57"
botocore = "^1.31.57"
canonicaljson = "^2.0.0"
confluent-kafka = { version = "^2.3.0", optional = true }
databricks-sdk = { version = "^0.14.0", optional = true }
databricks-sql-connector = { version = "^3.0.0", optional = true }
GitPython = "^3.1.37"
google-cloud-bigquery = { version = "^3.1.0", optional = true }
google-cloud-logging = { version = "^3.5.0", optional = true }
grpcio-tools = { version = "^1.59.3", optional = true }
jsonschema = "^4.18.6"
lkml = { version = "^1.3.1", optional = true }
looker-sdk = { version = "^23.6.0", optional = true }
metaphor-models = "0.30.10"
msal = { version = "^1.20.0", optional = true }
msgraph-beta-sdk = { version = "1.0.0", optional = true }
pyarrow = { version = "^14.0.1", extras = ["pandas"]}
pycarlo = { version = "^0.8.1", optional = true }
pydantic = { version = "2.5.1", extras = ["email"]}
pymssql = { version = "^2.2.9", optional = true }
pymysql = { version = "^1.0.2", optional = true }
python = ">=3.8.1,<4.0"
python-dateutil = "^2.8.1"
PyYAML = "^6.0"
requests = "^2.28.1"
setuptools = "^68.0.0"
smart-open = "^6.3.0"
snowflake-connector-python = { version = "^3.5.0", optional = true }
SQLAlchemy = { version = "^1.4.46", optional = true}
sql-metadata = { version = "^2.8.0", optional = true }
sqllineage = { version = "~=1.3.8", optional = true }
tableauserverclient = { version = "^0.25", optional = true }
thoughtspot_rest_api_v1 = { version = "1.5.3", optional = true }
trino = { version = "^0.327.0", optional = true }
pathvalidate = "^3.2.0"

[tool.poetry.extras]
all = [
  "asyncpg",
  "avro",
  "azure-identity",
  "azure-mgmt-datafactory",
  "confluent-kafka",
  "databricks-sdk",
  "databricks-sql-connector",
  "GitPython",
  "google-cloud-bigquery",
  "google-cloud-logging",
  "grpcio-tools",
  "lkml",
  "looker-sdk",
  "msal",
  "msgraph-beta-sdk",
  "pycarlo",
  "pymssql",
  "pymysql",
  "pyserde",
  "snowflake-connector-python",
  "SQLAlchemy",
  "sql-metadata",
  "sqllineage",
  "tableauserverclient",
  "thoughtspot-rest-api-v1",
  "trino",
]
bigquery = ["google-cloud-bigquery", "google-cloud-logging", "sql-metadata"]
datafactory = ["azure-identity", "azure-mgmt-datafactory"]
dbt = []
kafka = ["confluent-kafka", "avro", "grpcio-tools"]
looker = ["GitPython", "lkml", "looker-sdk", "sql-metadata"]
metabase = ["sql-metadata"]
monte_carlo = ["pycarlo"]
mssql = ["pymssql"]
mysql = ["pymysql", "SQLAlchemy"]
postgresql = ["asyncpg"]
power_bi = ["msal", "msgraph-beta-sdk", "sql-metadata"]
redshift = ["asyncpg", "sqllineage"]
snowflake = ["snowflake-connector-python", "sql-metadata"]
synapse = ["pymssql"]
tableau = ["tableauserverclient", "sqllineage"]
throughtspot = ["thoughtspot-rest-api-v1"]
trino = ["trino"]
unity_catalog = ["databricks-sdk", "databricks-sql-connector"]

[tool.poetry.dev-dependencies]
bandit = "^1.7.2"
black = "^23.3.0"
coverage = "^7.1.0"
datamodel-code-generator = { extras = ["http"], version = "^0.25.1" }
flake8 = "^6.0.0"
freezegun = "^1.2.2"
isort = "^5.11.4"
mypy = "^1.5.1"
pytest = "^7.2.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
testcontainers = "^3.7.1"
types-attrs = "^19.1.0"
types-confluent-kafka = "^1.0.1"
types-freezegun = "^1.1.10"
types-protobuf = "^4.24.0.4"
types-python-dateutil = "^2.8.19.12"
types-pytz = "^2023.3.0.0"
types-PyYAML = "^6.0.4"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.black]
exclude = "^/(metaphor/dbt/generated/.+)"

[tool.isort]
profile = "black"
extend_skip = [
  ".serverless",
  "dbt_manifest.py",
  "dbt_catalog.py"
]

[tool.mypy]
exclude = ["venv"]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.bandit]
exclude_dirs = ["venv"]
skips = [
  'B101',
  'B106',
  'B404',
  'B603',
  'B607',
  'B608'
]
