[tool.poetry]
name = "metaphor-connectors"
version = "0.14.165"
license = "Apache-2.0"
description = "A collection of Python-based 'connectors' that extract metadata from various sources to ingest into the Metaphor app."
authors = ["Metaphor <dev@metaphor.io>"]
readme = "README.md"
homepage = "https://metaphor.io"
repository = "https://github.com/MetaphorData/connectors"
packages = [
    { include = "metaphor" },
]

[tool.poetry.scripts]
metaphor = 'metaphor.__main__:main'

[tool.poetry.dependencies]
asyncpg = { version = "^0.30.0", optional = true }
avro = { version = "^1.11.3", optional = true }
aws-assume-role-lib = "^2.10.0"
azure-identity = { version = "^1.19.0", optional = true }
azure-mgmt-datafactory = { version = "^9.0.0", optional = true }
beautifulsoup4 = { version = "^4.12.3", optional = true }
boto3 = "^1.35.19"
botocore = "^1.35.19"
canonicaljson = "^2.0.0"
confluent-kafka = { version = "^2.7.0", optional = true }
databricks-sdk = { version = "^0.40.0", optional = true }
databricks-sql-connector = { version = "^3.7.0", optional = true }
fastavro = { version = "^1.9.2", optional = true }
GitPython = "^3.1.37"
google-cloud-bigquery = { version = "^3.25.0", optional = true }
google-cloud-logging = { version = "^3.5.0", optional = true }
gql = { extras = ["requests"], version = "^3.5.0", optional = true }
great-expectations = { version = "^1.2.0", optional = true }
grpcio-tools = { version = "^1.59.3", optional = true }
httpx = "^0.28.1"
jsonschema = "^4.23.0"
lkml = { version = "^1.3.6", optional = true }
llama-index = { version = "^0.10.19", optional = true }
llama-index-embeddings-azure-openai = { version = "^0.1.6", optional = true }
llama-index-readers-confluence = { version = "^0.1.4", optional = true }
llama-index-readers-notion = { version = "^0.1.6", optional = true }
looker-sdk = { version = "^24.2.0", optional = true }
lxml = { version = "~=5.0.0", optional = true }
metaphor-models = "0.41.3"
more-itertools = { version = "^10.1.0", optional = true }
msal = { version = "^1.28.0", optional = true }
msgraph-beta-sdk = { version = "~1.15.0", optional = true }
nltk = { version = "^3.9.1", optional = true }
oracledb = { version = "^2.5.0", optional = true }
parse = { version = "^1.20.0", optional = true }
pathvalidate = "^3.2.0"
psycopg2 = { version = "^2.9.10", optional = true }
pyarrow = { version = "^16.1.0", extras = ["pandas"]}
pycarlo = { version = "^0.9.0", optional = true }
pydantic = { version = "2.6.4", extras = ["email"]}
pyhive = { version = "^0.7.0", optional = true }
pymongo = { version = "^4.10.1", optional = true }
pymssql = { version = "~=2.2.11", optional = true }
pymysql = { version = "^1.0.2", optional = true }
python = ">=3.9,<3.12"
python-dateutil = "^2.8.1"
PyYAML = "^6.0"
requests = "^2.28.1"
sasl = { version = "^0.3.1", optional = true }
smart-open = "^7.0.1"
snowflake-connector-python = { version = "^3.12.3", optional = true }
snowflake-sqlalchemy = { version = "^1.6.1", optional = true }
SQLAlchemy = { version = "^2.0.31", optional = true}
sql-metadata = { version = "^2.10.0", optional = true }
sqlglot = { extras = ["rs"], version = "^25.5.0", optional = true }
sqllineage = { version = "~=1.3.8", optional = true }
tableauserverclient = { version = "^0.25", optional = true }
thoughtspot_rest_api_v1 = { version = "^1.8.2", optional = true }
thrift = { version = "^0.20.0", optional = true }
thrift-sasl = { version = "^0.4.3", optional = true }
trino = { version = "^0.331.0", optional = true }
trio = "^0.28.0"

[tool.poetry.extras]
all = [
  "asyncpg",
  "avro",
  "azure-identity",
  "azure-mgmt-datafactory",
  "beautifulsoup4",
  "confluent-kafka",
  "databricks-sdk",
  "databricks-sql-connector",
  "fastavro",
  "GitPython",
  "google-cloud-bigquery",
  "google-cloud-logging",
  "gql",
  "great-expectations",
  "grpcio-tools",
  "httpx",
  "lkml",
  "looker-sdk",
  "llama-index",
  "llama-index-embeddings-azure-openai",
  "llama-index-readers-confluence",
  "llama-index-readers-microsoft-sharepoint",
  "llama-index-readers-notion",
  "lxml",
  "more-itertools",
  "msal",
  "msgraph-beta-sdk",
  "nltk",
  "oracledb",
  "parse",
  "psycopg2",
  "pycarlo",
  "pyhive",
  "pymongo",
  "pymssql",
  "pymysql",
  "pyserde",
  "sasl",
  "snowflake-connector-python",
  "snowflake-sqlalchemy",
  "SQLAlchemy",
  "sql-metadata",
  "sqlglot",
  "sqllineage",
  "tableauserverclient",
  "thoughtspot-rest-api-v1",
  "thrift",
  "thrift-sasl",
  "trino",
]
bigquery = ["google-cloud-bigquery", "google-cloud-logging", "sql-metadata"]
confluence = ["llama-index", "llama-index-embeddings-azure-openai", "llama-index-readers-confluence", "nltk"]
datafactory = ["azure-identity", "azure-mgmt-datafactory"]
datahub = ["gql"]
dbt = ["httpx"]
great_expectations = ["great-expectations", "SQLAlchemy", "psycopg2", "snowflake-sqlalchemy", "snowflake-connector-python"]
hive = ["pyhive", "sasl", "thrift", "thrift-sasl"]
kafka = ["confluent-kafka", "avro", "grpcio-tools"]
looker = ["GitPython", "lkml", "looker-sdk"]
metabase = []
monday = ["llama-index", "llama-index-embeddings-azure-openai", "nltk"]
mongodb = ["pymongo"]
monte_carlo = ["pycarlo"]
mssql = ["pymssql"]
mysql = ["pymysql", "SQLAlchemy"]
notion = ["llama-index", "llama-index-embeddings-azure-openai", "llama-index-readers-notion", "nltk"]
oracle = ["oracledb", "SQLAlchemy"]
postgresql = ["asyncpg"]
power_bi = ["msal", "msgraph-beta-sdk"]
redshift = ["asyncpg"]
s3 = ["fastavro", "more-itertools", "parse"]
sharepoint = ["azure-identity", "beautifulsoup4", "llama-index", "lxml", "msgraph-beta-sdk", "nltk"]
snowflake = ["snowflake-connector-python", "sqlglot"]
static_web = ["beautifulsoup4", "llama-index", "llama-index-embeddings-azure-openai", "lxml", "nltk"]
synapse = ["pymssql"]
tableau = ["tableauserverclient", "sqllineage"]
thought_spot = ["thoughtspot-rest-api-v1", "sqllineage"]
trino = ["trino"]
unity_catalog = ["databricks-sdk", "databricks-sql-connector", "sqlglot"]

[tool.poetry.dev-dependencies]
ariadne-codegen = "^0.14.0"
bandit = "^1.7.2"
black = "^24.3.0"
coverage = "^7.1.0"
datamodel-code-generator = { extras = ["http"], version = "^0.25.5" }
flake8 = "^7.0.0"
freezegun = "^1.2.2"
isort = "^5.11.4"
minio = "7.2.0" # 7.2.1 introduces urllib3 v2, which will break everything else
mypy = "^1.9.0"
mypy-boto3-s3 = "^1.34.0"
polyfactory = "^2.14.1"
pyarrow-stubs = "^10.0.1.7"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.0.0"
pytest-testmon = "^2.1.0"
pytest-snapshot = "^0.9.0"
testcontainers = "^3.7.1"
testcontainers-minio = "^0.0.1rc1"
types-attrs = "^19.1.0"
types-confluent-kafka = "^1.0.1"
types-freezegun = "^1.1.10"
types-protobuf = "^4.24.0.4"
types-python-dateutil = "^2.8.19.12"
types-pytz = "^2023.3.0.0"
types-PyYAML = "^6.0.4"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.black]
exclude = "^/(metaphor/dbt/generated/.+)"

[tool.isort]
profile = "black"
extend_skip = [
  ".serverless",
  "dbt_manifest.py",
  "dbt_catalog.py"
]

[tool.mypy]
exclude = ["venv"]
explicit_package_bases = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.bandit]
exclude_dirs = ["venv", "metaphor/dbt/cloud/discovery_api/generated"]
skips = [
  'B101',
  'B106',
  'B404',
  'B603',
  'B607',
  'B608'
]

[tool.coverage.run]
source = [
  "metaphor"
]
omit = [
  # TODO(SC-14236): Include __init__.py back to coverage after fixing async testing issues
  "**/__init__.py",
  # Ignore auto-generated files
  "**/generated/*"
]
